@@ -1,3 +1,7 @@
+2010-03-23  Patrice Dumas  <pertusus@free.fr>
+
+	add undocumented debug option showing configuration
+
 2010-02-18  Patrice Dumas  <pertusus@free.fr>
 
 	Release 0.1.6.
